<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="bottom"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    tools:context="com.example.scanmanager.Code39Setting" >

    <TextView
        android:id="@+id/title1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/code_39_title1"
        android:textColor="#0d9678"
        android:textSize="19dp" />

    <RadioGroup
        android:id="@+id/rg_code39"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/title1"
        android:orientation="vertical" >

        <RadioButton
            android:id="@+id/rg_ncc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_marginTop="10dp"
            android:checked="true"
            android:text="@string/code_39_title1" />

        <RadioButton
            android:id="@+id/rg_vdt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/rg_ncc"
            android:layout_below="@+id/rg_ncc"
            android:text="@string/code_39_title1_2" 
            android:layout_marginTop="5dp"/>

        <RadioButton
            android:id="@+id/rg_vt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/rg_code39"
            android:layout_below="@+id/rg_code39"
            android:text="@string/code_39_title1_3"
            android:layout_marginTop="5dp" />
    </RadioGroup>

    <TextView
        android:id="@+id/title2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/rg_code39"
        android:layout_marginTop="20dp"
        android:text="@string/code_39_title2"
        android:textColor="#0d9678"
        android:textSize="19dp" />

    <RelativeLayout
        android:id="@+id/title2_1_layout"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_alignLeft="@+id/rg_code39"
        android:layout_below="@+id/title2"
        android:layout_marginTop="20dp"
        android:gravity="center_vertical"
        android:orientation="horizontal" >

        <CheckBox
            android:id="@+id/cb_code39_mini"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true" />
		<LinearLayout 
		    android:id="@+id/ll_code39_mini"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_toRightOf="@+id/cb_code39_mini"
            android:orientation="vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/Minimum"
            android:textSize="20sp" />
        <TextView
            android:id="@+id/tv_code39_mini"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="7dp"
            android:text=""
            android:textSize="13sp"/>
		</LinearLayout>
        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_toLeftOf="@+id/code39_mini_edit"
            android:background="@null"
            android:paddingRight="-35dp"
            android:src="@drawable/doubleline" />

        <ImageButton
            android:id="@+id/code39_mini_edit"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_toLeftOf="@+id/code39_mini_delete"
            android:background="@null"
            android:src="@drawable/pencil" 
            android:layout_marginRight="-6dp"
            android:onClick="doClick"/>
        <ImageButton
            android:id="@+id/code39_mini_delete"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_alignParentRight="true"
            android:background="@null"
            android:layout_marginRight="-5dp"
            android:src="@drawable/garbage"
            android:onClick="doClick" 
            />
    </RelativeLayout>

    <RelativeLayout
         android:id="@+id/title2_2_layout"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_alignLeft="@+id/rg_code39"
        android:layout_below="@+id/title2_1_layout"
        android:layout_marginTop="20dp"
        android:gravity="center_vertical"
        android:orientation="horizontal" >

        <CheckBox
            android:id="@+id/cb_code39_maxi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true" />
		<LinearLayout 
		    android:id="@+id/ll_code39_maxi"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_toRightOf="@+id/cb_code39_maxi"
            android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="bottom"
            android:text="@string/Maximum"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/tv_code39_maxi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="7dp"
            android:text=""
            android:textSize="13sp"/>
		</LinearLayout>
        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_toLeftOf="@+id/code39_max_edit"
            android:background="@null"
            android:paddingRight="-35dp"
            android:src="@drawable/doubleline" />

        <ImageButton
            android:id="@+id/code39_max_edit"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_toLeftOf="@+id/code39_maxi_delete"
            android:layout_marginRight="-6dp"
            android:background="@null"
            android:src="@drawable/pencil" 
            android:onClick="doClick"/>
        <ImageButton
            android:id="@+id/code39_maxi_delete"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_alignParentRight="true"
            android:background="@null"
            android:layout_marginRight="-5dp"
            android:src="@drawable/garbage"
            android:onClick="doClick" 
            />
    </RelativeLayout>

    <TextView
        android:id="@+id/title3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/title2_2_layout"
        android:layout_marginTop="20dp"
        android:text="@string/code_39_title3"
        android:textColor="#0d9678"
        android:textSize="19dp" />

    <RelativeLayout
        android:id="@+id/title3_1_layout"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_alignLeft="@+id/rg_code39"
        android:layout_below="@+id/title3"
        android:layout_marginTop="20dp"
        android:orientation="horizontal" >
	
        <CheckBox
            android:id="@+id/cb_code39_pre"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:layout_alignParentLeft="true" />
		<LinearLayout 
		    android:id="@+id/ll_code39_pre"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_toRightOf="@+id/cb_code39_pre"
            android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Prefix"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/tv_code39_pre"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="7dp"
            android:text=""
            android:textSize="13sp"/>
		</LinearLayout>
        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_toLeftOf="@+id/et_code39_prefix"
            android:background="@null"
            android:paddingRight="-35dp"
            android:src="@drawable/doubleline" />

        <ImageButton
            android:id="@+id/et_code39_prefix"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_toLeftOf="@+id/code39_prefix_delete"
            android:layout_marginRight="-6dp"
            android:background="@null"
            android:src="@drawable/pencil" 
            android:onClick="doClick"/>
         <ImageButton
            android:id="@+id/code39_prefix_delete"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_alignParentRight="true"
            android:background="@null"
            android:layout_marginRight="-5dp"
            android:src="@drawable/garbage" 
            android:onClick="doClick"
            />
        
    </RelativeLayout>

    <RelativeLayout
         android:id="@+id/title3_2_layout"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_alignLeft="@+id/rg_code39"
        android:layout_below="@+id/title3_1_layout"
        android:layout_marginTop="20dp"
        android:gravity="center_vertical"
        android:orientation="horizontal" >

        <CheckBox
            android:id="@+id/cb_code39_suf"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true" />
		<LinearLayout 
		    android:id="@+id/ll_code39_suf"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_toRightOf="@+id/cb_code39_suf"
            android:orientation="vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Suffix"
            android:textSize="20sp" />
        <TextView
            android:id="@+id/tv_code39_suf"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="7dp"
            android:text=""
            android:textSize="13sp" />
		</LinearLayout>
        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_toLeftOf="@+id/et_code39_suffix"
            android:background="@null"
            android:paddingRight="-35dp"
            android:src="@drawable/doubleline" />

        <ImageButton
            android:id="@+id/et_code39_suffix"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_toLeftOf="@+id/code39_suffix_delete"
            android:layout_marginRight="-6dp"
            android:background="@null"
            android:src="@drawable/pencil" 
            android:onClick="doClick"/>
          <ImageButton
            android:id="@+id/code39_suffix_delete"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_alignParentRight="true"
            android:background="@null"
            android:layout_marginRight="-5dp"
            android:src="@drawable/garbage" 
             android:onClick="doClick"
            />
    </RelativeLayout>

</RelativeLayout>